# discord-bot

./: .air.toml  .env.example  .gitignore  Cargo.toml  flake.nix  go.mod  go.sum  main.go  package.json
.cargo/: config.toml
.github/workflows/: build.yml  deploy.yml
.sqlx/: query-08c64a93ac2f84692d9de9a50fc127b69b6215e6beaa2d1c83a94d1a74cc570e.json  query-48138430d2140248dc8385ed6ee3619920b5119a178e54c214df6bbb576eabe3.json  query-536a013e79e640be3880c86b52726304d973cef2a0628a6bfa680e37cc0006c5.json  query-556773d3873de9acd4169009eafb3bbffc64a4ff2de320c4a26857ff895f0cfc.json  query-73dd7bc302c0c63335f1a516187827a127f3e88aae2dd14ff5aa4802c075096c.json  query-84ebd6d3156c5d36f2d57d618ecfce9f92705ab068495b1b6f28ac21dec7d2f6.json  query-86cd0998f8a2db1700beceeaad618373cd7dfb49a1ed1b66b475e00426a0bb54.json  query-8b39852b5f05e72d8045f9d291b341b3975a43cccb78c93ba51f5ead2084bfeb.json  query-8c3e5272fdb1388ae9d71c121930c316c0d65b2468d4015312e32ff57c87e4bf.json  query-c27bcf2bd1d7f22954abba7b2b2e86f1e53b1c2c28309b47997c077c17c46ae8.json  query-d921322cce8fae7533c407fb9618a52d5314b13270c533833a4f7778514f0bfa.json
apps/bot/: Dockerfile
apps/bot/src/: component.rs  main.rs
apps/bot/src/command/stock/: delete.rs  watch.rs
internal/bot/: bot.go  config.go  start.go
internal/command/: activate.go  deactivate.go  ping.go  register.go
internal/config/: config.go
libs/stock/: Cargo.toml
libs/stock/migrations/: 0001_init.sql
libs/stock/src/: symbol_store.rs
libs/stock/src/indicators/: cdc.rs
pkg/logger/: config.go  logger.go
prisma/: schema.prisma
prisma/migrations/20260620180648_init/: migration.sql
prisma/migrations/20260620191719_add_created_by/: migration.sql
prisma/migrations/20260620195142_add_pending_status/: migration.sql
src/: component.rs  daily.rs  lib.rs  main.rs
src/command/stock/: trigger.rs  watch.rs
stock/: Cargo.toml
stock/src/: price_client.rs  symbol_store.rs
