[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
stock = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dotenvy = "0.15.7"
poise = "0.6.1"
serenity = "0.12.5"
tokio = { workspace = true }
tokio-cron-scheduler = { version = "*", features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = { workspace = true }

[workspace]
resolver = "3"
members = ["stock"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

stock = { path = "stock" }
