[package]
name = "stock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "ab_glyph", "line_series", "full_palette"] }
resvg = "0.45"
redis = { version = "1.1", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }
ta = "0.5"
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
